fix(style): padding to fix shadow position overflow

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -70,6 +70,7 @@
   display: flex;
   align-items: center;
   margin: 0 auto;
+  padding: 0 16px;
 }
 
 .search__input {
